--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculadora</title>
 </head>
 <body>
-    <h1>Calculadora</h1>
-
     <div id='calculadora'>
-        <div id='visor'>
+        <div id='visor'></div>
         <div id='teclado'>
-            <button>C</button>
-            <button>DEL</button>
-            <button>()</button>
-            <button>/</button>
+            <button class="deletadores">AC</button>
+            <button class="deletadores">C</button>
+            <button class='parenteses'>()</button>
+            <button class='operadores'>/</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>X</button>
+            <button class='operadores'>X</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>-</button>
+            <button class='operadores'>-</button>
             <button>3</button>
             <button>2</button>
             <button>1</button>
-            <button>+</button>
+            <button class='operadores'>+</button>
             <button>,</button>
             <button>0</button>
-            <button>=</button>
+            <button id="btn-igual">=</button>
         </div>
     </div>
 </body>
