--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -11,26 +11,28 @@
     <div id='calculadora'>
         <div id='visor'></div>
         <div id='teclado'>
-            <button class="deletadores">AC</button>
-            <button class="deletadores">C</button>
-            <button class='parenteses'>()</button>
-            <button class='operadores'>/</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class='operadores'>X</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class='operadores'>-</button>
-            <button>3</button>
-            <button>2</button>
-            <button>1</button>
-            <button class='operadores'>+</button>
-            <button>,</button>
-            <button>0</button>
-            <button id="btn-igual">=</button>
+            <button class='deletadores' onclick='onClick(this)'>AC</button>
+            <button class='deletadores' onclick='onClick(this)'>C</button>
+            <button class='parenteses' onclick='onClick(this)'>()</button>
+            <button class='operadores' onclick='onClick(this)'>/</button>
+            <button onclick='onClick(this)'>7</button>
+            <button onclick='onClick(this)'>8</button>
+            <button onclick='onClick(this)'>9</button>
+            <button class='operadores' onclick='onClick(this)'>X</button>
+            <button onclick='onClick(this)'>4</button>
+            <button onclick='onClick(this)'>5</button>
+            <button onclick='onClick(this)'>6</button>
+            <button class='operadores' onclick='onClick(this)'>-</button>
+            <button onclick='onClick(this)'>3</button>
+            <button onclick='onClick(this)'>2</button>
+            <button onclick='onClick(this)'>1</button>
+            <button class='operadores' onclick='onClick(this)'>+</button>
+            <button onclick='onClick(this)'>,</button>
+            <button onclick='onClick(this)'>0</button>
+            <button id="btn-igual" onclick='onClick(this)'>=</button>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
