Adicionei lógica AC de Del
adicionei as lógicas de deletar e limpar tudo do visor.

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -12,7 +12,7 @@
         <div id='visor'></div>
         <div id='teclado'>
             <button class='deletadores' onclick='onClick(this)'>AC</button>
-            <button class='deletadores' onclick='onClick(this)'>C</button>
+            <button class='deletadores' onclick='onClick(this)'>Del</button>
             <button class='parenteses' onclick='onClick(this)'>()</button>
             <button class='operadores' onclick='onClick(this)'>/</button>
             <button onclick='onClick(this)'>7</button>
