Introduzir lógica para alguns botões e uma pilha.
agora o código possui uma pilha para armazenar os parênteses que forem sendo colocados na cálculo. Além disso, foram colocados alguns testes de lógicas para operadores, etc.

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id='calculadora'>
-        <div id='visor'></div>
+        <div id='visor'>|</div>
         <div id='teclado'>
             <button class='deletadores' onclick='onClick(this)'>AC</button>
             <button class='deletadores' onclick='onClick(this)'>Del</button>
@@ -18,7 +18,7 @@
             <button onclick='onClick(this)'>7</button>
             <button onclick='onClick(this)'>8</button>
             <button onclick='onClick(this)'>9</button>
-            <button class='operadores' onclick='onClick(this)'>X</button>
+            <button class='operadores' onclick='onClick(this)'>x</button>
             <button onclick='onClick(this)'>4</button>
             <button onclick='onClick(this)'>5</button>
             <button onclick='onClick(this)'>6</button>
