Botão igual funcionando
ainda tenho que corrigir alguns erros de lógica, mas aqui está uma versão funcional.

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
     <div id='calculadora'>
-        <div id='visor'>|</div>
+        <div id='visor' class="noCopy">|</div>
         <div id='teclado'>
-            <button class='deletadores' onclick='onClick(this)'>AC</button>
-            <button class='deletadores' onclick='onClick(this)'>Del</button>
-            <button class='parenteses' onclick='onClick(this)'>()</button>
-            <button class='operadores' onclick='onClick(this)'>/</button>
-            <button onclick='onClick(this)'>7</button>
-            <button onclick='onClick(this)'>8</button>
-            <button onclick='onClick(this)'>9</button>
-            <button class='operadores' onclick='onClick(this)'>x</button>
-            <button onclick='onClick(this)'>4</button>
-            <button onclick='onClick(this)'>5</button>
-            <button onclick='onClick(this)'>6</button>
-            <button class='operadores' onclick='onClick(this)'>-</button>
-            <button onclick='onClick(this)'>3</button>
-            <button onclick='onClick(this)'>2</button>
-            <button onclick='onClick(this)'>1</button>
-            <button class='operadores' onclick='onClick(this)'>+</button>
-            <button onclick='onClick(this)'>,</button>
-            <button onclick='onClick(this)'>0</button>
-            <button id="btn-igual" onclick='onClick(this)'>=</button>
+            <button class='deletadores noCopy' onclick='onClick(this)'>AC</button>
+            <button class='deletadores noCopy' onclick='onClick(this)'>Del</button>
+            <button class='parenteses noCopy' onclick='onClick(this)'>()</button>
+            <button class='operadores noCopy' onclick='onClick(this)'>/</button>
+            <button class='noCopy' onclick='onClick(this)'>7</button>
+            <button class='noCopy' onclick='onClick(this)'>8</button>
+            <button class='noCopy' onclick='onClick(this)'>9</button>
+            <button class='operadores noCopy' onclick='onClick(this)'>x</button>
+            <button class='noCopy' onclick='onClick(this)'>4</button>
+            <button class='noCopy' onclick='onClick(this)'>5</button>
+            <button class='noCopy' onclick='onClick(this)'>6</button>
+            <button class='operadores noCopy' onclick='onClick(this)'>-</button>
+            <button class='noCopy' onclick='onClick(this)'>3</button>
+            <button class='noCopy' onclick='onClick(this)'>2</button>
+            <button class='noCopy' onclick='onClick(this)'>1</button>
+            <button class='operadores noCopy' onclick='onClick(this)'>+</button>
+            <button class='noCopy' onclick='onClick(this)'>,</button>
+            <button class='noCopy'onclick='onClick(this)'>0</button>
+            <button id="btn-igual" class="noCopy" onclick='onClick(this)'>=</button>
         </div>
     </div>
 
