Adicionei um footer
Adicionei um footer (rodapé) com alguns links de contato.

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -33,6 +33,16 @@
         </div>
     </div>
 
+    <footer>
+        <span>&copy; desenvolvido por Marcos Antonio</span>
+        <section class="social">
+            <a href="https://github.com/devmarcosantonio" target=”_blank” rel=”external”><img src="img/icon-github.svg"></a>
+            <a href="https://www.linkedin.com/in/marcos-antonio-07019a233" target=”_blank” rel=”external”><img src="img/icon-linkedin.svg"></a>
+            <a href="mailto:marcosjr2001dev@gmail.com" target=”_blank” rel=”external”><img src="img/icon-gmail.svg"></a>
+            <a href="https://wa.me/5598992337497"target=”_blank” rel=”external”><img src="img/icon-whatsapp.svg"></a>
+        </section>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
